# stock_analyst

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 00_index.md  01_core_philosophy.md  02_data_sources.md  03_analysis_methodology.md  04_tech_stack.md  05_claude_integration.md  06_scoring_system.md  07_development_roadmap.md  08_backtesting.md  09_risk_management.md  10_execution_plan.md
src/stock_analyst/: __init__.py  config.py  main.py
src/stock_analyst/agents/: __init__.py
src/stock_analyst/analysis/: __init__.py  sentiment_analyzer.py
src/stock_analyst/data_sources/: __init__.py  base.py  dart_collector.py  procurement_collector.py
src/stock_analyst/scoring/: __init__.py  alpha_scorer.py
src/stock_analyst/tasks/: __init__.py
tests/: test_config.py
tests/test_analysis/: test_sentiment_analyzer.py
tests/test_data_sources/: test_base_collector.py  test_procurement_collector.py
tests/test_scoring/: test_alpha_scorer.py
