[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analyst"
version = "0.1.0"
description = "Claude 기반 증권 애널리스트 시스템 - 대안 데이터로 알파를 발굴하는 AI 분석 플랫폼"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
full = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "kiwipiepy>=0.17.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.4.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "python-telegram-bot>=20.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
